kube/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ham-exam
  labels:
    name: ham-exam
