kube/keycloak.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ham-exam-keycloak-dep
  namespace: ham-exam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ham-exam-keycloak

  template:
    metadata:
      labels:
        app: ham-exam-keycloak
    spec:
      containers:
      - name: ham-exam-keycloak-container
        image: keycloak/keycloak:26.4
        args:
          - "start-dev"
          - "--import-realm"
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: realm-config
          mountPath: /opt/keycloak/data/import
          readOnly: true
      volumes:
      - name: realm-config
        configMap:
          name: ham-exam-keycloak-realm

---

apiVersion: v1
kind: Service
metadata:
  name: ham-exam-keycloak-svc
  namespace: ham-exam
spec:
  selector:
    app: ham-exam-keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ham-exam-keycloak-ingress
  namespace: ham-exam
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ham.dragonbytes.org
      secretName: ham-exam-tls
  rules:
    - host: ham.dragonbytes.org
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ham-exam-keycloak-svc
                port:
                  number: 8080
